# drawings

./: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: application-tests.yaml
drawings/: geometry.py  main.py
tests/: test__geometry.py
