[tool.poetry]
name = "drawings"
version = "0.0.0"
description = "A creative outlet for fun and stuff."
readme = "README.md"
authors = ["Bilbottom"]
repository = "https://github.com/Bilbottom/drawings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
coverage-badge = "^1.1.0"
pre-commit = "^3.3.3"
pylint = "^2.17.5"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"


[tool.pytest.ini_options]
addopts = "--cov=drawings --cov-report term-missing --cov-fail-under=60"
testpaths = [
    "tests",
]


[tool.coverage.run]
omit = [
    "drawings/main.py",
]


[tool.isort]
profile = "black"


[tool.pylint.format]
max-line-length = 120

[tool.pylint.MASTER]
ignore-paths = "^tests/.*$"
disable = ["no-else-return", "no-else-raise"]
