[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "drawings"
version = "0.0.0"
description = "A creative outlet for fun and stuff."
readme = "README.md"
authors = ["Bilbottom"]
repository = "https://github.com/Bilbottom/drawings"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.2"
geometry = {git = "http://git@github.com/Bilbottom/geometry.git", rev = "v0.0.2"}

[tool.poetry.group]
dev.optional = false

[tool.poetry.group.dev.dependencies]
coverage-badge = "^1.1.0"
pre-commit = "^3.3.3"
pylint = "^2.17.5"


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["F", "I", "N", "PL", "R", "RUF", "S", "UP", "W"]
ignore = []
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",    #  Use of `assert` detected
    "PLR2004", #  Magic value used in comparison
]
